--- a/style/mediaQueries.css
+++ b/style/mediaQueries.css
@@ -1,70 +1,102 @@
 @media only screen and (max-width: 1024px) {
-    #playButton {
-        max-width: 35%;
-        font-size: 1.4em;
-    }
-
     #overlay > #logoImg {
         max-width: 45%;
     }
 }
 
-@media only screen and (max-width: 768px) {
-    #playButton {
-        max-width: 40%;
-        font-size: 1.6em;
-        border: 7px solid #FFEBB9; 
+@media only screen and (max-width: 930px) {
+    #controls a {
+        font-size: 2em;
+        padding: .8em 1em;
     }
+}   
 
+@media only screen and (max-width: 768px) {
     #overlay > #logoImg {
         max-width: 55%;
+    }
+
+    nav button {
+        font-size: 1.3em;
+        height: 50px;
+        margin-top: 7px;
+    }
+
+    #infoImg {
+        width: 407px;
     }
 }
 
 @media only screen and (max-width: 600px) {
-    .fa-bars {
-        text-align: center;
-        position: absolute;
-        margin: auto;
-        left: 0; right: 0;
-    }
-
-    #playButton {
-        max-width: 40%;
-        font-size: 1.6em;
-        border: 7px solid #FFEBB9; 
-    }
-
     #overlay > #logoImg {
         max-width: 75%;
     }
-   
+
+    #butFirst img {
+        width: 90%;
+    }
+
+    #time {
+        margin: .1em 0;
+        width: 100%;
+    }
 }
 
+@media only screen and (max-width: 580px) {
+    #controls {
+        display: block;
+        top: 30%;
+    }
+
+    #controls a {
+        width: 100%;
+        color: #fff;
+        padding: 1em 1.5em;
+        margin: .1em;
+    }
+
+}
+
+@media only screen and (max-width: 407px) {
+
+    #controls {
+        display: block;
+        top: 30%;
+    }
+
+    #controls a {
+        width: 100%;
+        color: #fff;
+        padding: 1em 1.5em;
+        margin: .1em;
+    }
+
+    #time {
+        width: 407px;
+        margin: .1em 0;
+    }
+
+    #gameOverlay #winOrLose {
+        width: 391px;
+    }
+
+    #gameOverlay a {
+        width: 189.5px;
+    }
+}
+
+
 @media only screen and (max-width: 320px) {
-    #overlay > #logoImg {
-        max-width: 95%;
-    }
-    
-    .fa-bars {
-        text-align: center;
-        position: absolute;
-        margin: auto;
-        left: 0; right: 0;
+
+    #time {
+        margin: .1em 0;
+        width: 407px;
     }
 
-    #menu {
-        max-width: 60%;
+    #butFirst img {
+        width: 70%;
     }
 
-    .mnBtn3 {
-        font-size: 2em;
-    }
 
-    #playButton {
-        max-width: 50%;
-        font-size: 1.6em;
-        border: 7px solid #FFEBB9; 
-    }
 }
     
